Added everything needed to make everything work (except email is still not being included in the profile for some odd reason).
